2003-08-27  Richard Sandiford  <rsandifo@redhat.com>

	* elf32-frv.c (elf32_frv_relocate_section): Use
	_bfd_elf_rela_local_sym.

2003-08-26  Michael Snyder  <msnyder@redhat.com>

	* cpu-frv.c: Remove unused enum.

2003-08-25  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* reloc.c: Fix documentation for MIPS ELF relocations.
	libbfd.h: Regenerate.
	bfd-in2.h: Regenerate.

2003-08-24  Jason Eckhardt  <jle@rice.edu>

	* coff-i860.c (CALC_ADDEND): Define to be a no-op. 

2003-08-24  Jason Eckhardt  <jle@rice.edu>

	* elf32-i860.c (elf32_i860_relocate_pc16): Subtract 4 and
	shift by 2 before storing the relocated value.

2003-08-23  Jason Eckhardt  <jle@rice.edu>

        * coff-i860.c (coff_i860_reloc_nyi): New function.
	(howto_table): Add entries for relocations PAIR, HIGHADJ, HIGH,
	LOWn, SPLITn, and BRADDR.
	(RTYPE2HOWTO): Check that the r_type is within the howto_table
	before trying to access the entry.
	(coff_i860_rtype_to_howto): Likewise.
	(coff_i860_reloc_type_lookup): New function.
	(i860_reloc_processing): New function.
	(coff_bfd_reloc_type_lookup): Define macro.
	(RELOC_PROCESSING): Define macro.
	Minor formatting adjustments.

2003-08-23  Alan Modra  <amodra@bigpond.net.au>

	* elflink.h (elf_link_add_object_symbols): Don't crash on NULL owner.

2003-08-22  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (elfNN_ia64_create_dynamic_sections): Align the
	.got section at 8 bytes.

2003-08-21  Nick Clifton  <nickc@redhat.com>

	* cofflink.c: Update to ISO C90 and tidy up formatting.

2003-08-21  Randolph Chung  <tausq@debian.org>

	* elf32-hppa.c (elf32_hppa_object_p): For elf32-hppa-linux, objects
	can have OSABI=Linux or OSABI=SysV.  Check for both.
	* elf64-hppa.c (elf64_hppa_object_p): Likewise.

2003-08-21  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.

2003-08-20  Richard Sandiford  <rsandifo@redhat.com>

	* elf64-mips.c (elf_backend_copy_indirect_symbol): Define.

2003-08-20  Nick Clifton  <nickc@redhat.com>
